--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <body>
     <h1>TEMA 1</h1>
     <ul>
-        <li><a href="Unidad1/ejercicio2/aarticulo.xml">Ejercicio 1</a></li>
-        <li><a href="Unidad1/ejercicio3/Recetaa.xml">Ejercicio 2</a></li>
+        <li><a href="Unidad 1/Ejercicio 1/aarticulo.xml">Ejercicio 1</a></li>
+        <li><a href="Unidad 1/Ejercicio 2/Recetaa.xml">Ejercicio 2</a></li>
     </ul>
     <h1>TEMA 2</h1>
     <ul>
-        <li><a href="Unidad2/ejercicio1/Untitled-3.html">Ejercicio 1</a></li>
-        <li><a href="Unidad2/ejercicio2/Horario.html">Ejercicio 2</a></li>
+        <li><a href="Unidad 2/Ejercicio 1/Untitled-3.html">Ejercicio 1</a></li>
+        <li><a href="Unidad 2/Ejercicio 2/Horario.html">Ejercicio 2</a></li>
     </ul>
 </body>
 </html>
