--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 font-size: 36px;
                 text-align: center;
                 margin-bottom: 20px;
-                color: #00eaff;
+                color: #25edff;
                 animation: slideIn 1s ease-in-out;
             }
     
@@ -72,7 +72,7 @@
     
             a {
                 text-decoration: none;
-                color: #ff77aa;
+                color: #fe1fc2;
                 font-size: 18px;
                 transition: color 0.3s;
             }
@@ -89,7 +89,7 @@
                 width: 60px;
                 height: 60px;
                 border-radius: 50%;
-                background: linear-gradient(145deg, #ff77aa, #ff4181);
+                background: linear-gradient(145deg, #ff6ba1, #eb3773);
                 box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1);
                 display: flex;
                 justify-content: center;
@@ -119,6 +119,7 @@
     <ul>
         <li><a href="Unidad 2/Ejercicio 1/Untitled-3.html">Ejercicio 1</a></li>
         <li><a href="Unidad 2/Ejercicio 2/Horario.html">Ejercicio 2</a></li>
+        <Li><a href="Unidad 2/Ejercicio3/FRAMES.html">Ejercicio 3</a></Li>
     </ul>
     <div class="circle"></div>       
     <div class="triangle"></div>
