--- a/Unidad 2/Ejercicio 3/FRAMES.html
+++ b/Unidad 2/Ejercicio 3/FRAMES.html
@@ -2,12 +2,12 @@
 <html><head><title>Probando IFRAMES</title></head>
 <body>
 
-Frame 1   
+<h1 align="center">Frame 1  </h1> 
 
  <iframe width="300" height="250" src="https://kahoot.it/" 
  frameborder="1" scrolling="yes" id="framel"></iframe>
 
-Frame 2
+<h1 align="center">Frame 2</h1>
 
  <iframe width="500" height="350" src="https://kahoot.it/"
  fraameborder="2" scrolling="no" id="frame2"></iframe>
