--- a/Unidad 2/Ejercicio 4/FORMULARIO.html
+++ b/Unidad 2/Ejercicio 4/FORMULARIO.html
@@ -20,8 +20,11 @@
                 maxlength="3" value=""><br>
                 Poblacion...<input type="text" name="pobla" size="20"
                 maxlength="30" value=""><br>
-
-                <input type="radio" name="genero" value="M">M
+                <h3 align="center">seleciona tipo de genero</h3>
+                <form action="">
+                <p align="center">
+                <input type="radio" name="M" value="M">M 
+                <input type="radio" name="F" value="F">F
                 
             </p>
         </form>
