--- a/index/index.html
+++ b/index/index.html
@@ -110,8 +110,10 @@
                 font-size: 24px;
             }
         </style>
+        <article>
         <li><a href="Unidad 1/Ejercicio 1/aarticulo.xml">Ejercicio 1</a></li>
         <li><a href="Unidad 1/Ejercicio 2/Recetaa.xml">Ejercicio 2</a></li>
+        </article>
     </ul>
     <h1>TEMA 2</h1>
     <ul>
@@ -120,6 +122,10 @@
         <Li><a href="Unidad 2/Ejercicio 3/FRAMES.html">Ejercicio 3</a></Li>
         <li><a href="Unidad 2/Ejercicio 4/FORMULARIO.html">Ejercicio 4</a></li>
     </ul>
+    <object type="application/x-shockwave-flash" data="ejemplo_flash.swf" style="width: 200px; height: 50px;"> 
+    <param name="movie" value="ejemplo_flash.swf"/> 
+        ERROR (no puede mostrarse el objeto)
+    </object>
     <div class="circle"></div>       
     <div class="triangle"></div>
 </body>
