--- a/index/index.html
+++ b/index/index.html
@@ -29,6 +29,11 @@
     <param name="movie" value="ejemplo_flash.swf"/> 
         ERROR (no puede mostrarse el objeto)
     </object>
+    <object type="application/x-shockwave-flash" data="https://www.youtube.com/watch?v=ND90KbDaK88" style="width: 425px; height:350px;" > 
+    <param name="movie" value="https://www.youtube.com/watch?v=ND90KbDaK88"/> 
+    ERROR (no puede mostrarse el objeto) 
+    </object> 
+
     <div class="circle"></div>       
     <div class="triangle"></div>
 </body>
