--- a/Unidad 2/Ejercicio 5/Curriculun.html
+++ b/Unidad 2/Ejercicio 5/Curriculun.html
@@ -1,11 +1,117 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=style initial-scale=1.0">
-    <title>Curriculon</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Currículum Vitae - Adulis  Lopez</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .header {
+            background-color: black;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        .header img {
+            border-radius: 50%;
+            width: 100px;
+            height: 100px;
+        }
+        .main-container {
+            display: flex;
+            flex-wrap: wrap;
+            padding: 20px;
+        }
+        .column {
+            flex: 1;
+            padding: 20px;
+        }
+        .column-left {
+            background-color: #e3e3e3;
+        }
+        .column h3 {
+            color: black;
+            margin-top: 0;
+        }
+        .info-list ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        .info-list ul li {
+            margin-bottom: 10px;
+        }
+        .contact-section {
+            background-color: black;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        .contact-section a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="header">
+        <img src="c:\Users\DAW\Pictures\OIP.jpg" alt="Foto">
+        <h1>Adulis Lopez</h1>
+        <p>Desarrollador wweb</p>
+    </div>
+
+    <div class="main-container">
+        <div class="column column-left">
+            <h3>Formación</h3>
+            <p>Sistemas Microinformáticos (2021)</p>
+            <p>Grado bachiller de informatica (2020 - 2022)</p>
+            <p></p>
+
+            <h3>Información</h3>
+            <div class="info-list">
+                <ul>
+                    <li>Carnet de conducir</li>
+                    <li>Coche propio</li>
+                    <li>Disponibilidad para viajar</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="column">
+            <h3>Experiencia</h3>
+            <p><strong>PRACTICAS (2024)</strong></p>
+            <p>Prácticas en centros de formación.</p>
+
+            <p><strong>BORCELLE (2010)</strong></p>
+            <p>Marketing Manager - Jefe de marketing digital.</p>
+
+            <p><strong>FAUJECT (2012-2021)</strong></p>
+            <p>Marketing Manager.</p>
+
+            <h3>Herramientas</h3>
+            <div class="info-list">
+                <ul>
+                    <li>Redes Sociales</li>
+                    <li>Software de Vídeo</li>
+                    <li>Edición de vídeo</li>
+                </ul>
+            </div>
+
+            <h3>Idiomas</h3>
+            <p>Español, Inglés</p>
+        </div>
+    </div>
+
+    <div class="contact-section">
+        <h3>Contacto</h3>
+        <p>📞 672896751</p>
+        <p>✉️ <a href="mailto:rzalgut928@g.educaand.es">aloptir731@g.educaand.es</a></p>
+        <p>📍 Plaza Hermanos Álvarez Quintero, CP 11500</p>
+    </div>
 </body>
 </html>
