--- a/Unidad 2/Ejercicio 5/Curriculun.html
+++ b/Unidad 2/Ejercicio 5/Curriculun.html
@@ -4,59 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currículum Vitae - Adulis  Lopez</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        .header {
-            background-color: black;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        .header img {
-            border-radius: 50%;
-            width: 100px;
-            height: 100px;
-        }
-        .main-container {
-            display: flex;
-            flex-wrap: wrap;
-            padding: 20px;
-        }
-        .column {
-            flex: 1;
-            padding: 20px;
-        }
-        .column-left {
-            background-color: #e3e3e3;
-        }
-        .column h3 {
-            color: black;
-            margin-top: 0;
-        }
-        .info-list ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        .info-list ul li {
-            margin-bottom: 10px;
-        }
-        .contact-section {
-            background-color: black;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        .contact-section a {
-            color: white;
-            text-decoration: none;
-            font-weight: bold;
-        }
-    </style>
+    <link rel="stylesheet" href="curriculum.css">
 </head>
 <body>
     <div class="header">
@@ -67,16 +15,17 @@
 
     <div class="main-container">
         <div class="column column-left">
-            <h3>Formación</h3>
-            <p>Sistemas Microinformáticos (2021)</p>
+            <h3>Formación</h3> 
+            <p>Formación grado superior (2024 - 2026)</p>
+            <p>Cocinero certificado (2024)</p>
             <p>Grado bachiller de informatica (2020 - 2022)</p>
-            <p></p>
+           
 
             <h3>Información</h3>
             <div class="info-list">
                 <ul>
-                    <li>Carnet de conducir</li>
-                    <li>Coche propio</li>
+                    <li></li>
+                    <li></li>
                     <li>Disponibilidad para viajar</li>
                 </ul>
             </div>
@@ -84,21 +33,21 @@
 
         <div class="column">
             <h3>Experiencia</h3>
-            <p><strong>PRACTICAS (2024)</strong></p>
-            <p>Prácticas en centros de formación.</p>
+            <p><strong>PRACTICAS DE COCINA (2024)</strong></p>
+            <p>Carrefur centro comercial</p>
 
-            <p><strong>BORCELLE (2010)</strong></p>
-            <p>Marketing Manager - Jefe de marketing digital.</p>
+            <p><strong>PEON DE COSNTRUCCION</strong></p>
+            <p>Construccion (2018 - 2020)</p>
 
-            <p><strong>FAUJECT (2012-2021)</strong></p>
-            <p>Marketing Manager.</p>
+            <p><strong>COCINERO DE COMIDAD RAPIDA</strong></p>
+            <p>SALCHIPAPERIA LOS LA GARTOS (2020 - 2023)</p>
 
             <h3>Herramientas</h3>
             <div class="info-list">
                 <ul>
                     <li>Redes Sociales</li>
                     <li>Software de Vídeo</li>
-                    <li>Edición de vídeo</li>
+                    <li>Edición</li>
                 </ul>
             </div>
 
@@ -110,7 +59,7 @@
     <div class="contact-section">
         <h3>Contacto</h3>
         <p>📞 672896751</p>
-        <p>✉️ <a href="mailto:rzalgut928@g.educaand.es">aloptir731@g.educaand.es</a></p>
+        <p>✉️ <a href="aloptir731@g.educaand.es">aloptir731@g.educaand.es</a></p>
         <p>📍 Plaza Hermanos Álvarez Quintero, CP 11500</p>
     </div>
 </body>
