--- a/index.html
+++ b/index.html
@@ -6,100 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adulis HTML</title>  
     <head><title>HORARIO</title>
-        <link rel="stylesheet" href="indexStilo.css">
+    <link rel="stylesheet" href="index.css">
 </head>
-<style>
-    body {
-    font-family: 'Press Start 2P', cursive;
-    background: linear-gradient(135deg, #1f1c2c, #928dab);
-    color: #ffffff;
-    margin: 0;
-    padding: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    flex-direction: column;
-    overflow: hidden;
-}
-
-.container {
-    backdrop-filter: blur(10px);
-    background: rgba(255, 255, 255, 0.1);
-    border-radius: 20px;
-    padding: 30px;
-    max-width: 800px;
-    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.2), -10px -10px 30px rgba(255, 255, 255, 0.1);
-    border: 1px solid rgba(255, 255, 255, 0.2);
-}
-
-h1 {
-    font-size: 36px;
-    text-align: center;
-    margin-bottom: 20px;
-    color: #25edff;
-    animation: slideIn 1s ease-in-out;
-}
-
-
-
-ul {
-    list-style: none;
-    padding: 0;
-}
-
-li {
-    margin: 10px 0;
-    padding: 15px;
-    border-radius: 12px;
-    background: rgba(255, 255, 255, 0.15);
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1);
-    transition: transform 0.3s, box-shadow 0.3s;
-}
-
-li:hover {
-    transform: translateY(-10px);
-    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5), -10px -10px 20px rgba(255, 255, 255, 0.2);
-}
-
-a {
-    text-decoration: none;
-    color: #fe1fc2;
-    font-size: 18px;
-    transition: color 0.3s;
-}
-
-a:hover {
-    color: #00eaff;
-}
-
-.fab {
-    position: fixed;
-    bottom: 30px;
-    right: 30px;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    background: linear-gradient(145deg, #ff6ba1, #eb3773);
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    animation: bounce 2s infinite;
-}
-
-.fab:hover {
-    transform: scale(1.1);
-}
-
-
-
-.fab-icon {
-    color: #fff;
-    font-size: 24px;
-}
-</style>
 <body style="font-family: 'Press Start 2P', cursive;">
     <div class="container">
     <h1>Lenguaje De marcas SI</h1>
@@ -116,13 +24,7 @@ a:hover {
         <li><a href="Unidad 2/Ejercicio 2/Horario.html">Ejercicio 2</a></li>
         <Li><a href="Unidad 2/Ejercicio 3/FRAMES.html">Ejercicio 3</a></Li>
         <li><a href="Unidad 2/Ejercicio 4/FORMULARIO.html">Ejercicio 4</a></li>
-        <li><a href="Unidad 2/Ejercicio 5/Curriculun.html">Ejercicio 5</a></li>
+        <li><a href="Unidad 2/Ejercicio 5/Curriculun.html">Ejercicio 5 Curriculun</a></li>
     </ul>
-    <object type="application/x-shockwave-flash" data="ejemplo_flash.swf" style="width: 200px; height: 50px;"> 
-    <param name="movie" value="ejemplo_flash.swf"/> 
-        ERROR (no puede mostrarse el objeto)
-        
-    <div class="circle"></div>       
-    <div class="triangle"></div>
 </body>
 </html>
