--- a/Unidad 2/Ejercicio 5/Curriculun.html
+++ b/Unidad 2/Ejercicio 5/Curriculun.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="c:\Users\DAW\Pictures\OIP.jpg" alt="Foto">
+        <img src="OIP.jpg" alt="Foto">
         <h1>Adulis Lopez</h1>
         <p>Desarrollador wweb</p>
     </div>
