--- a/index.html
+++ b/index.html
@@ -26,5 +26,11 @@
         <li><a href="Unidad 2/Ejercicio 4/FORMULARIO.html">Ejercicio 4</a></li>
         <li><a href="Unidad 2/Ejercicio 5/Curriculun.html">Ejercicio 5 Curriculun</a></li>
     </ul>
+    <h1>TEMA 3</h1>
+    <ul>
+        <article>
+        <li><a href="Unidad 3/code 2.html">Ejercicio 1</a></li>
+        </article>
+    </ul>
 </body>
 </html>
