--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     <h1>TEMA 3</h1>
     <ul>
         <article>
-        <li><a href="Unidad 3/code 2.html">Ejercicio 1</a></li>
+        <li><a href="Unidad 3/CODE/code 2.html">Ejercicio 1 Calculadora</a></li>
+        <li><a href="Unidad 3/BOOO/BOOOO.html">Ejercicio Landing Page</a></li>
+        <li><a href="Unidad 3/bootstrap5/botstrap.html">Ejercicio 3</a></li>
         </article>
     </ul>
 </body>
