--- a/index.html
+++ b/index.html
@@ -1,44 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adulis HTML</title>  
-    <head><title>HORARIO</title>
+    <title>Adulis HTML</title>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
 </head>
-<body style="font-family: 'Press Start 2P', cursive;">
-    <div class="container">
-    <h1>Lenguaje De marcas SI</h1>
-    <h1>TEMA 1</h1>
-    <ul>
-        <article>
-        <li><a href="Unidad 1/Ejercicio 1/aarticulo.xml">Ejercicio 1</a></li>
-        <li><a href="Unidad 1/Ejercicio 2/Recetaa.xml">Ejercicio 2</a></li>
-        </article>
-    </ul>
-    <h1>TEMA 2</h1>
-    <ul>
-        <li><a href="Unidad 2/Ejercicio 1/Untitled-3.html">Ejercicio 1</a></li>
-        <li><a href="Unidad 2/Ejercicio 2/Horario.html">Ejercicio 2</a></li>
-        <Li><a href="Unidad 2/Ejercicio 3/FRAMES.html">Ejercicio 3</a></Li>
-        <li><a href="Unidad 2/Ejercicio 4/FORMULARIO.html">Ejercicio 4</a></li>
-        <li><a href="Unidad 2/Ejercicio 5/Curriculun.html">Ejercicio 5 Curriculun</a></li>
-    </ul>
-    <h1>TEMA 3</h1>
-    <ul>
-        <article>
-        <li><a href="Unidad 3/CODE/code 2.html">Ejercicio 1 Calculadora</a></li>
-        <li><a href="Unidad 3/BOOO/BOOOO.html">Ejercicio Landing Page</a></li>
-        <li><a href="Unidad 3/bootstrap5/botstrap.html">Ejercicio 3</a></li>
-        </article>
-    </ul>
-    <h1>TEMA 4</h1>
-    <ul>
-        <article>
-        <li><a href="Unidad 4/Java script/javaScript.html"></a>Ejemplo</li>
-        </article>
-    </ul>
+<body>
+
+    <aside>
+        <div class="container">
+            <h1>Lenguaje de Marcas SI</h1>
+            <h2>TEMA 1</h2>
+            <ul>
+                <li><a href="Unidad 1/Ejercicio 1/aarticulo.xml" target="viewer">Ejercicio 1</a></li>
+                <li><a href="Unidad 1/Ejercicio 2/Recetaa.xml" target="viewer">Ejercicio 2</a></li>
+            </ul>
+            <h2>TEMA 2</h2>
+            <ul>
+                <li><a href="Unidad 2/Ejercicio 1/Untitled-3.html" target="viewer">Ejercicio 1</a></li>
+                <li><a href="Unidad 2/Ejercicio 2/Horario.html" target="viewer">Ejercicio 2</a></li>
+                <li><a href="Unidad 2/Ejercicio 3/FRAMES.html" target="viewer">Ejercicio 3</a></li>
+                <li><a href="Unidad 2/Ejercicio 4/FORMULARIO.html" target="viewer">Ejercicio 4</a></li>
+                <li><a href="Unidad 2/Ejercicio 5/Curriculun.html" target="viewer">Ejercicio 5 Currículum</a></li>
+            </ul>
+            <h2>TEMA 3</h2>
+            <ul>
+                <li><a href="Unidad 3/CODE/code 2.html" target="viewer">Ejercicio 1 Calculadora</a></li>
+                <li><a href="Unidad 3/BOOO/BOOOO.html" target="viewer">Ejercicio Landing Page</a></li>
+                <li><a href="Unidad 3/bootstrap5/botstrap.html" target="viewer">Ejercicio 3</a></li>
+            </ul>
+            <h2>TEMA 4</h2>
+            <ul>
+                <li><a href="Unidad 4/Java script/javaScript.html" target="viewer">Ejemplo</a></li>
+            </ul>
+        </div>
+    </aside>
+
+    <main>
+        <iframe name="viewer" src="" frameborder="0"></iframe>
+    </main>
+
+    <div class="fab">
+        <span class="fab-icon">+</span>
+    </div>
+
 </body>
 </html>
