--- a/Unidad 4/Java script/Ejercio 1.html
+++ b/Unidad 4/Java script/Ejercio 1.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sumatorio del 1 al 100</title>
 </head>
 <body>
+
+    <h1>Sumatorio del 1 al 100</h1>
+    <div id="resultado"></div>
+
     <script>
-        function calcularSumatorio() {
-            // Crear un vector de 100 números aleatorios entre 0 y 1
-            let vector = [];
-            let sumatorio = 0;
+        // Crear un array con los números del 1 al 100
+        let vector = Array.from({ length: 100 }, (_, i) => i + 1);
 
-            for (let i = 0; i < 100; i++) {
-                vector.push(Math.random()); // Genera un número aleatorio
-            }
+        // Calcular el sumatorio de todos los números
+        let sumatorio = vector.reduce((acc, num) => acc + num, 0);
 
-            // Calcular el sumatorio de todos los números
-            sumatorio = vector.reduce((acc, num) => acc + num, 0);
-
-            // Mostrar el resultado
+        // Mostrar el resultado cuando el DOM esté cargado
+        document.addEventListener("DOMContentLoaded", () => {
             document.getElementById("resultado").textContent = "El sumatorio es: " + sumatorio;
-        }
+        });
     </script>
+
 </body>
 </html>
