--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
             <ul>
                 <li><a href="Unidad 4/Java script/javaScript.html" target="viewer">Ejemplo</a></li>
                 <li><a href="Unidad 4/Java script/Ejercio 1.html" target="viewer">Ejercicio 1</a></li>
+                <li><a href="Unidad 4/index/apartado 1.html">Pares e Impares</a></li>
             </ul>
         </div>
     </aside>
-
+    
     <main>
         <iframe name="viewer" src="" frameborder="0"></iframe>
     </main>
