--- a/Unidad 4/index2/index2.html
+++ b/Unidad 4/index2/index2.html
@@ -6,6 +6,7 @@
     <title>Ocultar y Mostrar Números</title>
     <link rel="stylesheet" href="index2.css">
     <script defer src="index2.js"></script>
+    <Script defer src="jquery-3.7.1.min.js"></Script>
 </head>
 <body>
     <div class="app-container">
