--- a/index.html
+++ b/index.html
@@ -37,8 +37,12 @@
                 <li><a href="Unidad 4/Java script/Ejercio 1.html" target="viewer">Ejercicio 1</a></li>
                 <li><a href="Unidad 4/index/apartado 1.html" target="viewer">Pares e Impares</a></li>
                 <li><a href="Unidad 4/index2/index2.html" target="viewer">EJ2</a></li>
-                <li><a href="Unidad 4/index3/index3.html" target="viewer">J3 Calculadora</a></li>
+                <li><a href="Unidad 4/index3/index 3.html" target="viewer">J3 Calculadora</a></li>
             </ul>
+            <h2>EXAMEN</h2>
+            <Ul>
+                <li><a href="Unidad 4/Examen/Examen.html" target="viewer">EXAMEN</a></li>
+            </Ul>
         </div>
     </aside>
 
