--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
             <Ul>
                 <li><a href="Unidad 4/Examen/Examen.html" target="viewer">EXAMEN</a></li>
             </Ul>
+            <h2>3º Trimestre</h2>
+            <ul>
+                <li><a href="Trimestre_3º/formulario_IA/index_IA.html" target="viewer">Ejercicio de formulario IA</a></li>
+            </ul>
         </div>
     </aside>
 
