--- a/Trimestre_3º/formulario_IA/index_IA.html
+++ b/Trimestre_3º/formulario_IA/index_IA.html
@@ -49,7 +49,7 @@
             </div>
 
             <button type="button" onclick="generarPrompt()">Enviar</button>
-            <button type="button" onclick="EnviarIA">Enviar a la IA</button>
+            <button type="button" onclick="EnviarIA">Cosultar a la IA</button>
         </form>
 
         <div class="prompt" id="prompt"></div>
