--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <h2>3º Trimestre</h2>
             <ul>
                 <li><a href="Trimestre_3º/formulario_IA/index_IA.html" target="viewer">Ejercicio de formulario IA</a></li>
+                <li><a href="Trimestre_3º/Empleados/Tabla.html" target="viewer">Ejercicio Tabla</a></li>
             </ul>
         </div>
     </aside>
