--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <ul>
                 <li><a href="Trimestre_3º/formulario_IA/index_IA.html" target="viewer">Ejercicio de formulario IA</a></li>
                 <li><a href="Trimestre_3º/Empleados/Tabla.html" target="viewer">Ejercicio Tabla</a></li>
-                <li><a href=""></a></li>
+                <li><a href="Trimestre_3º/Matricula/matricula.html" target="viewer">Ejercicio Matricula</a></li>
                 <li><a href=""></a></li>
             </ul>
         </div>
